[B]1.0.2[/B]
- Fixed episode list urls

[B]1.0.1[/B]
- Initial release