@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.tvrageapi.com"
        name="TV Rage API"
-       version="1.0.2"
+       version="1.0.3"
        provider-name="XBMC Community">
   <requires>
     <import addon="xbmc.metadata" version="1.0"/>
