@@ -1,8 +1,4 @@
 <?xml version="1.0" encoding="utf-8" standalone="yes"?>
 <strings>
-    <string id="30000">Use DVD Order</string>
-    <string id="30001">Use Absolute Ordering (Single Season)</string>
-    <string id="30002">Enable Fanart</string>
-    <string id="30003">Prefer Posters</string>
-    <string id="30004">Language</string>
+    
 </strings>
