@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?><scraper framework="1" date="2011-10-12" name="TV Rage API" content="tvshows" thumb="tvrage.jpg" language="en">
+﻿<?xml version="1.0" encoding="utf-8"?><scraper framework="1" date="2012-06-20" name="TV Rage API" content="tvshows" thumb="tvrage.jpg" language="en">
 	<NfoUrl dest="3">
 		<RegExp input="$$1" output="&lt;url&gt;http://services.tvrage.com/full_show_info.php?sid=\1&lt;/url&gt;" dest="3">
 			<expression>http://(?:www\.)?tvrage.com/shows/id-([0-9]+)</expression>
